// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render left side button 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#2ac5db",
      "borderBottomRightRadius": 60,
      "borderTopRightRadius": 60,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 32,
      "paddingLeft": 32,
      "paddingRight": 48,
      "paddingTop": 32,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontSize": 40,
          "fontWeight": "bold",
        },
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`render normal button 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#2ac5db",
      "borderRadius": 60,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 32,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 32,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontSize": 40,
          "fontWeight": "bold",
        },
      ]
    }
  >
    test
  </Text>
</View>
`;
